tests/baselines/reference/extendsUntypedModule.types
=== /a.ts ===
import Foo from "foo";
>Foo : any (error)

import Bar from "bar"; // error: unused
>Bar : any (error)

export class A extends Foo { }
>A : A
>Foo : any (error)

